--- a/style1.css
+++ b/style1.css
@@ -10,11 +10,13 @@ div { background-color:lightgrey; }
 h1 { font-family:Algerian; text-align:center; margin:1; font-size: 32pt; padding-top: 16pt; text-align: center;}
 h2 { color:blue; font-family:Arial; font-weight:bold; padding-left: 16pt; text-align: center;}
 h3 { color: blue; font-family: arial; font-weight: bold; text-align: center left; }
-p { color: black; font-size: 12pt; text-align: left; padding-left: 20pt; }
+p { color: black; font-size: 12pt; text-align: left; padding-left: 20pt; padding-right: 20pt; }
 
 a {text-decoration: none; text-align: left; }
 a:link, a:visited {color: black;}
 a:hover, a:active {text-decoration: underline; color: red;}
 #nav { text-align: center; }
-#favorites{ text-align: center; }
-#footer { font-size: 12pt; font-style: italicl; text-align: center; padding-bottom: 24pt;
+#title { text-align: center; float: right; }
+#footer { font-size: 12pt; font-style: italicl; text-align: center; }
+
+
