--- a/style1.css
+++ b/style1.css
@@ -4,19 +4,36 @@ body
 	font-size: 18 pt;
 	font-family: Veranda;
 	text-align: center;	
+	
+	
+	
 }
-
+#wrap {background: lightgrey; width:900px; margin:auto; padding:20px; text-align:left; border-left: solid 6px yellow; border-right: solid 6px yellow;
+border-top: solid 6px yellow; border-bottom: solid 6px yellow;  }
 div { background-color:lightgrey; }
-h1 { font-family:Algerian; text-align:center; margin:1; font-size: 32pt; padding-top: 16pt; text-align: center;}
-h2 { color:blue; font-family:Arial; font-weight:bold; padding-left: 16pt; text-align: center;}
-h3 { color: blue; font-family: arial; font-weight: bold; text-align: center left; }
-p { color: black; font-size: 12pt; text-align: left; padding-left: 20pt; padding-right: 20pt; }
+h1.title { font-family:Algerian; text-align:center; margin:1; font-size: 32pt; margin-top: 15px; text-align: center; margin-bottom: 0px;}
+#header { color: blue; }
+h2.titletop { color: blue; }
+h2.title  {	font-size: 14pt;
+			font-weight: normal;
+			text-decoration: underline;
+			font-variant: small-caps;
+			padding-bottom: 0px;
+			margin-top: 30px;
+			margin-bottom: 25px;
+									}
 
+h3 { color: blue; font-family: arial; font-weight: bold; text-align: center left; }
+p { color: black; font-size: 12pt; text-align: left; padding-left: 50pt; padding-right: 50pt; }
+ul { list-style: none; }
 a {text-decoration: none; text-align: left; }
 a:link, a:visited {color: black;}
 a:hover, a:active {text-decoration: underline; color: red;}
-#nav { text-align: center; }
-#title { text-align: center; float: right; }
-#footer { font-size: 12pt; font-style: italicl; text-align: center; }
 
-
+#nav {  text-align: center; background-color: yellow; text-decoration: underline; font-family: arial; font-size: 15pt; }
+#nav li { display: inline; padding-right: 15pt; }
+#title li{ text-align: center; float: left; font-size: 14pt; padding-bottom: 1pt; }
+#footer { font-size: 14pt; font-family: arial; color: blue; }
+#photo2{ width:325px; padding:10px; border: solid 5px yellow; margin; 0px; text-align: center; padding-top: 10px; }
+#photo1 { width:325px; padding:10px; border: solid 5px yellow; margin; 0px; text-align: center; padding-top: 10px; padding-bottom: 10px; }
+#photos { text-align: center; }
