--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 body
 {
 	background-color: blue;
-	font-size: 18 pt;
+	font-size: 18pt;
 	font-family: Veranda;
 	text-align: center;	
 	
@@ -11,7 +11,7 @@ body
 #wrap {background: lightgrey; width:900px; margin:auto; padding:20px; text-align:left; border-left: solid 6px yellow; border-right: solid 6px yellow;
 border-top: solid 6px yellow; border-bottom: solid 6px yellow;  }
 div { background-color:lightgrey; }
-h1.title { font-family:Algerian; text-align:center; margin:1; font-size: 32pt; margin-top: 15px; text-align: center; margin-bottom: 0px;}
+h1.title { font-family:Algerian; text-align:center; margin:1px; font-size: 32pt; margin-top: 15px; text-align: center; margin-bottom: 0px;}
 #header { color: blue; }
 h2.titletop { color: blue; }
 h2.title  {	font-size: 14pt;
@@ -23,7 +23,7 @@ h2.title  {	font-size: 14pt;
 			margin-bottom: 25px;
 									}
 
-h3 { color: blue; font-family: arial; font-weight: bold; text-align: center left; }
+h3 { color: blue; font-family: arial; font-weight: bold; text-align: left; }
 p { color: black; font-size: 12pt; text-align: left; padding-left: 50pt; padding-right: 50pt; }
 ul { list-style: none; }
 a {text-decoration: none; text-align: left; }
@@ -34,6 +34,6 @@ a:hover, a:active {text-decoration: underline; color: red;}
 #nav li { display: inline; padding-right: 15pt; }
 #title li{ text-align: center; float: left; font-size: 14pt; padding-bottom: 1pt; }
 #footer { font-size: 14pt; font-family: arial; color: blue; }
-#photo2{ width:325px; padding:10px; border: solid 5px yellow; margin; 0px; text-align: center; padding-top: 10px; }
-#photo1 { width:325px; padding:10px; border: solid 5px yellow; margin; 0px; text-align: center; padding-top: 10px; padding-bottom: 10px; }
+#photo2{ width:325px; padding:10px; border: solid 5px yellow; text-align: center; padding-top: 10px; }
+#photo1 { width:325px; padding:10px; border: solid 5px yellow; text-align: center; padding-top: 10px; padding-bottom: 10px; }
 #photos { text-align: center; }
